--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 <br>
 <div>
 <h1><u>SEQUENCE FOR LEARNING WEB DEVELOPMENT:</u></h1>
-<button class="btn">HTML</button>
-<button class="btn">CSS</button>
-<button class="btn"> JavaScript</button>
-<button class="btn">Bootstrap</button>
-<button class="btn">GitHub</button>
-<button class="btn">React</button>
-<button class="btn">MongoDB</button>
-<button class="btn">Node.js</button>
+<button class="btn"><img src="./img/html.png" height="15px">HTMl</button>
+<button class="btn"><img src="./img/css.png" height="15px">CSS</button>
+<button class="btn"><img src="./img/Javascript.png" height="15px"> JavaScript</button>
+<button class="btn"><img src="./img/bootstrap.png" height="15px">Bootstrap</button>
+<button class="btn"><img src="./img/github.png" height="15px">GitHub</button>
+<button class="btn"><img src="./img/react.png" height="15px">React</button>
+<button class="btn"><img src="./img/mongodb.png" height="15px">MongoDB</button>
+<button class="btn"><img src="./img/node-js.png" height="15px">Node.js</button>
 </div>
 <br>
 <img src="./img/Web-Development-Roadmap-1.webp" width="100%" class="img"> 
