add new changes

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <button class="btn"><img src="./img/github.png" height="15px">GitHub</button>
 <button class="btn"><img src="./img/react.png" height="15px">React</button>
 <button class="btn"><img src="./img/mongodb.png" height="15px">MongoDB</button>
-<button class="btn"><img src="./img/node-js.png" height="15px">Node.js</button>
+<button class="btn"><img src="./img/node-js.png" height="15px">.js</button>
 </div>
 <br>
 <img src="./img/Web-Development-Roadmap-1.webp" width="100%" class="img"> 
 
 
 <h1><u>STRUCTURE SYLLABUS FOR SMOOTH LEARNING:</u></h1>
-<div class="block1">
+<div class="block1" width="100%">
 <div class="box">
 <b><u>WEEK-1</u></b>  <br><br>
 ▪️Introduction to Web Development <br>
@@ -93,7 +93,7 @@
 </div>
 </div>
 
-<div class="block2">
+<div class="block2" width="100%">
 <div class="box">
 <b><u>WEEK-4</u></b><br><br>
 ▪️margin, padding and box-model<br>
