--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Introduction to Git & GitHub<br>
             <td >
                 <h2>Contact us :</h2>
                 Telephone : <a href="tel:+91-9876543210">+91-9876543210</a><br>
-                Email : <a href="web-development@gmail.com">web-development@gmail.com</a>
+                Email : <a href="web-development-codix@gmail.com">web-development-wedix@gmail.com</a>
             </td>
             <td >
                 <h2>Follow us:</h2>
